objects/Change_Audit__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Change Audits</relationshipLabel>
        <relationshipName>Change_Audits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement</label>
        <referenceTo>echosign_dev1__SIGN_Agreement__c</referenceTo>
        <relationshipLabel>Change Audits</relationshipLabel>
        <relationshipName>Change_Audits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_of_Change__c</fullName>
        <label>Date of Change</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <label>Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Value__c</fullName>
        <label>New Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Id__c</fullName>
        <label>Object Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Type__c</fullName>
        <description>The name of the SObject that is to be changed</description>
        <label>Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Value__c</fullName>
        <label>Old Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Originating_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Originating Agreement</label>
        <referenceTo>echosign_dev1__SIGN_Agreement__c</referenceTo>
        <relationshipLabel>Change Audits (Originating Agreement)</relationshipLabel>
        <relationshipName>Change_Audits1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Change Audit</label>
    <nameField>
        <displayFormat>CA-{00000000}</displayFormat>
        <label>Change Audit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Change Audits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>